# kaggle

./: README.md
Prediction_of_H1N1_vaccination/: Prediction_of_H1N1_vaccination.ipynb  requirements.txt
docker/RTX3080/: .env
docker/no-gpu/: .env
environments/dev/RTX3080/: docker-compose.yaml
environments/exp/Regression_with_an_Insurance_Dataset/: pyproject.toml
environments/prod/no-gpu/: docker-compose.yaml
src/projects/Prediction_of_H1N1_vaccination/: README.md
src/projects/Regression_with_an_Insurance_Dataset/: EDA.ipynb  EDA_result.csv  baseline.ipynb
