[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = ""
authors = ["lgh <lghmk2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
missingno = "^0.5.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.0"
lightgbm = "^4.5.0"
mlflow = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
